--- a/plugin.css
+++ b/plugin.css
@@ -18,7 +18,7 @@
 #HDPP .hdpp-note { color: #a3a3a3; display: block; margin-right: 10px; }
 #HDPP table { width: 100%; }
 #HDPP td { vertical-align:middle; padding-bottom: 9px; width: 50%; vertical-align: top; }
-#HDPP td label { color:initial;display:initial;float:initial;font-weight:initial;margin:initial;padding:initial;text-align:initial;width:initial; }
+#HDPP td label { font-family: 'Open Sans',Arial,Helvetica; display: inline; float: none; margin-right: 6px; font-weight: normal; }
 #HDPP td input, #HDPP td select { margin: 0 6px 0 0 !important; }
 #HDPP #hdpp-timeSpent div { display: inline-block; padding: 10px 4px; margin: 8px 3px; border-radius: 3px; background-color: #f5f5f5; border: 1px solid #d3d3d3;  }
 #HDPP #hdpp-timeSpent input { border: none; width: 45px; margin: 0 !important; padding: 0 !important; background-color: #f5f5f5; text-align: center; box-shadow: none;  }
